--- a/demo.html
+++ b/demo.html
@@ -1,5 +1,5 @@
 <html>
-<title>Demos daw 2</title>
+<title>Demos DAW 2</title>
 <head> </head>
 <script>
 
@@ -34,29 +34,36 @@ console.log(m);
 
 
 
-alert("Hola" + m);
+alert("Hola" );
 
 function validation(){
 
     let user = document.getElementById("login").value;
     let pass = document.getElementById("Contrasenya").value;
     if(user.length  === 0){
-        alert("Falta posar l'usuari!" + "  " + m);
+        alert("Falta posar l'usuari!" + "  " );
         document.getElementById("login").style.borderColor = "red";
         document.getElementById("msg").innerHTML = "Introdueix l'usuari";
         document.getElementById("msg").style.color = "red";
 
-    }
-    if(pass.length  === 0){
-        alert("Falta posar la contrasenya!" + "  " + m);
+
+    } else if(pass.length  === 0){
+        alert("Falta posar la contrasenya!" + "  " );
         document.getElementById("Contrasenya").style.borderColor = "red";
         document.getElementById("msg").innerHTML = "Introdueix la  contrasenya";
         document.getElementById("msg").style.color = "red";
 
-    }
-    if(user.length  === 0 & pass.length  === 0) {
+    } else if(user.length  === 0 & pass.length  === 0) {
         document.getElementById("msg").innerHTML = "Introdueix l'usuari i la constrassenya!";
         document.getElementById("msg").style.color = "red";
+    } else {
+        document.getElementById("msg").style.color = "green";
+        document.getElementById("msg").innerHTML = "Inici Sessió!";
+        document.getElementById("login").style.borderColor = "grey";
+        document.getElementById("Contrasenya").style.borderColor = "grey";
+
+
+        
     }
 
 }
@@ -76,12 +83,11 @@ function validation(){
 
     <DIV>
         <h2 id="title">Alumnat DAW 2 </h2><br/>
-        <input type = "text"  name="login" id ="login" placeholder="escriu algo" required/>
-        <input type = "Contrasenya" name="Contrasenya" id ="Contrasenya" placeholder="Contrasenya" required/>
+        <input type = "text"  name="login" id ="login" placeholder="escriu algo" />
+        <input type = "Contrasenya" name="Contrasenya" id ="Contrasenya" placeholder="Contrasenya" />
         <input type = "button" text = "Enviar" onclick="validation()" value = "enviar">
     </DIV>
 
     
 </body>
 </html>   
-
