--- a/Tasca3.html
+++ b/Tasca3.html
@@ -100,6 +100,7 @@ function validation(){
 
     let user = document.getElementById("login").value;
     let pass = document.getElementById("Contrasenya").value;
+
     if(user.length  === 0){
         alert("Falta posar l'usuari!" + "  " );
         document.getElementById("login").style.borderColor = "red";
@@ -128,16 +129,6 @@ function validation(){
 
 }
 
-
-//Comentaris, tipus de variables, mateixa variable es pot posar diferents tipos
-var x = "hola";
-console.log(x);
-x = "adéu";
-console.log(x);
-
-
-let m= "Júlia";
-console.log(m);
 }
     </script>
 
@@ -150,7 +141,7 @@ console.log(m);
     </DIV>
 
     
-    <form action="index.php" method="post">
+    <form action="https://agora.xtec.cat/insmontsia/" method="post">
     <ul>
      <li>
        <label for="user">Nom:</label>
@@ -177,4 +168,3 @@ console.log(m);
 
 
 </html>
-
